samples/_failures_safe/1761341254_20caec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e7e7d88.c: In function ‘main’:
./samples/SAFE/__tmp_1e7e7d88.c:163:5: error: expected declaration or statement at end of input
  163 |     print_matrix(&a);
      |     ^~~~~~~~~~~~
